# codex

./: .gitattributes  README.md  pyproject.toml
.github/workflows/: ci.yml
architecture/: c4-component.drawio  c4-component.mmd  c4-context.drawio  c4-context.mmd  detailed-design.md  sequence-diagram.drawio
configs/: families_crisis.yaml  families_crisis_images.yaml  families_crisis_text.yaml  ocr_fixes.yaml
output/families_crisis_and_caring/: qa_report.csv
output/families_crisis_and_caring/markdown/: families_crisis_and_caring.md  families_crisis_and_caring_TEXT_v1.md  families_crisis_and_caring_TEXT_v3.md  families_crisis_and_caring_TEXT_v4.md  families_crisis_and_caring_TEXT_v7.md  families_crisis_and_caring_TEXT_v8.md
script-carti/: folder_structure.md  ocr_to_md.py  process_pdf.py
script-carti/configs/: families_crisis.yaml
scripts/: eval_cer.py  make_gold_sample.py
src/ocrmd/: __init__.py  cli.py  config.py  markdown.py  ocr.py  pdf.py  preprocess.py  qa.py  split.py  structure.py
src/ocrmd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config.py
